# classical-feature-matching

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: brightness_experiment.py  noise_experiment.py  rotation_experiment.py  scale_experiment.py  translation_experiment.py
sift/: __init__.py  descriptors.py  hough.py  keypoints.py  matching.py  orientation.py  scale_space.py
tests/: __init__.py  test_hough.py  test_sift.py
